--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="C:\Users\teagr\Projects_FORDE\colmar_academy\stylesheet.css" rel="stylesheet">
+        <link href="stylesheet.css" type="text/css" rel="stylesheet">
         <title>Colmar Academy</title>
     </head>
     
     <body>
         <header>
             <div id="logo">
-                <img src="C:\Users\teagr\Projects_FORDE\colmar_academy\resources\images\ic-logo.svg">
+                <img src="resources\images\ic-logo.svg">
                 <p><strong>COLMAR</strong>ACADEMY</p>
             </div>
 
@@ -22,9 +22,9 @@
             </nav> 
         </header>
         
-        <div class="container">
+        <div class="container one">
             <div class="left">
-                <img src="C:\Users\teagr\Projects_FORDE\colmar_academy\resources\images\banner.jpg">
+                <img src="resources\images\banner.jpg">
             </div>
             <div class="right">
                 <h1>Learn something new everyday</h1>
@@ -35,38 +35,38 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container two">
             <div class="left">
-                <img src="C:\Users\teagr\Projects_FORDE\colmar_academy\resources\images\information-main.jpg">
+                <img src="resources\images\information-main.jpg">
                 <div class="text">
                     <h1>It doesn't hurt to keep practicing</h1>
-                    <h5>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur color consequat, tristique ligula."</h5>
-                    <p>Emanuel, Sr Strategist at Hiring.com</p>
+                    <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur color consequat, tristique ligula."</p>
+                    <h6>Emanuel, Sr Strategist at Hiring.com</h6>
                 </div>
             </div>
             <div class="right">
                 <div class="row">
-                    <img src="C:\Users\teagr\Projects_FORDE\colmar_academy\resources\images\information-orientation.jpg">
+                    <img src="resources\images\information-orientation.jpg">
                     <div class="text">
                         <h4>Orientation date</h4>
                         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                        <h6>Read more</h6>
+                        <h5>Read more</h5>
                     </div>
                 </div>
                 <div class="row">
-                    <img src="C:\Users\teagr\Projects_FORDE\colmar_academy\resources\images\information-campus.jpg">
+                    <img src="resources\images\information-campus.jpg">
                     <div class="text">
                         <h4>Our campus</h4>
                         <p>Find which campus is close by you</p>
-                        <h6>Read more</h6>
+                        <h5>Read more</h5>
                     </div>
                 </div>
                 <div class="guest">
-                    <img src="C:\Users\teagr\Projects_FORDE\colmar_academy\resources\images\information-guest-lecture.jpg">
+                    <img src="resources\images\information-guest-lecture.jpg">
                     <div class="text">
                         <h4>Our guest lecture</h4>
                         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                        <h6>Read more</h6>
+                        <h5>Read more</h5>
                     </div>
                 </div>
 
