--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                     </div>
                 </div>
                 <div class="guest">
-                    <img src="resources\images\information-guest-lecture.jpg">
+                <img src="resources\images\information-guest-lecture.jpg">
+
                     <div class="text">
                         <h4>Our guest lecture</h4>
                         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -72,6 +73,95 @@
 
             </div>
         </div>
-        
+        <div class="container three">
+            <h1>Start learning</h1>
+            <div class="courses">
+                <div class="course">
+                    <img src="resources\images\course-software.jpg">
+                    <div class="description">
+                      <h4>Software engineering</h4>
+                      <p>COURSES</p>
+                      <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="resources\images\course-computer-art.jpg">
+                    <div class="description">
+                      <h4>Computer art</h4>
+                      <p>COURSES</p>
+                      <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="resources\images\course-design.jpg">
+                    <div class="description">
+                      <h4>Design</h4>
+                      <p>COURSES</p>
+                      <p>User Experience Design, User Research, Visual Design</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="resources\images\course-data.jpg">
+                    <div class="description">
+                      <h4>Data</h4>
+                      <p>COURSES</p>
+                      <p>Data Science, Big Data, SQL, Data Visualization</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="resources\images\course-business.jpg">
+                    <div class="description">
+                      <h4>Business</h4>
+                      <p>COURSES</p>
+                      <p>Product Development, Business Development, Startup</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="resources\images\course-marketing.jpg">
+                    <div class="description">
+                      <h4>Marketing</h4>
+                      <p>COURSES</p>
+                      <p>Analytics, Content Marketing, Mobile Marketing</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container four">
+            <h1>Thesis exhibit</h1>
+            <div class="thesis">
+                <div class="left">
+                    <video controls width="100%">
+                       <source src="resources\videos\thesis.mp4" type="video/mp4">
+                    </video>
+                    <div class="text">
+                      <h4>Reimagine urban</h4>
+                      <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="fisma">
+                        <img src="resources\images\thesis-fisma.jpg">
+                        <div class="text">
+                            <h4>Fisma: Design and Prototype</h4>
+                            <p>Designer showcase of new prototype product</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <img src="resources\images\thesis-now-and-then.jpg">
+                        <div class="text">
+                            <h4>Now and then</h4>
+                            <p>Research study about New York<p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div id="copy">
+                &copy; Copyright 2016 Colmar Academy. All rights reserved.
+            </div>
+            <div id="link">Terms Privacy
+            </div>
+        </footer>
     </body>
 </html>
